...
        <SkeletonBestiary />
      </View>
    );
  }

  return (
    <View style={styles.container} testID='bestiary.screen'>
      <FlatList
        data={listData}
        keyExtractor={(item) => item.id}
        ListHeaderComponent={renderHeader}
        ListEmptyComponent={
          monsters.length ? (
...
